--- a/src/app/nav/navbar.component.html
+++ b/src/app/nav/navbar.component.html
@@ -9,10 +9,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">All Events <span class="sr-only">(current)</span></a>
+          <a class="nav-link" [routerLink]="['/events']"  routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">All Events <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Create Event</a>
+          <a class="nav-link" [routerLink]="['/events/new']" routerLinkActive="active">Create Event</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -23,7 +23,7 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Welcome Okan</a>
+          <a class="nav-link" tabindex="-1" [routerLink]="['user/profile']" >Welcome Okan</a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
